--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -44,7 +44,13 @@
       </div>
       <div class="menu-wrapper">
         <ul>
-          
+          <li><a href="/" class="active">INICIO</a></li>
+            <li><a href="/codigos">CARGAR CÓDIGO</a></li>
+            <li><a href="/consumos">CONSUMOS</a></li>
+            <li><a href="/canjes">CANJES</a></li>
+            <li><a href="/premios">PREMIOS</a></li>
+            <li><a href="/categorias">CATEGORÍAS</a></li>
+            <li><a href="/profile">PERFIL</a></li>
         </ul>
       </div>
       <div class="profile-wrapper">
