--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -82,7 +82,7 @@ body {
 
 .home-wrapper {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   position: relative;
 }
@@ -96,7 +96,7 @@ body {
 
 .form-home-wrapper {
   width: 50%;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url('../images/Fondo_desktop.jpg');
   background-position: center;
   background-size: cover;
@@ -199,6 +199,22 @@ body {
   border: 2px solid white;
   border-radius: 5px;
   justify-content: center;
+}
+
+.btn.fb {
+  padding: 0 30px;
+  background: #3B5998;
+  border: 0;
+}
+
+.btn.fb:before {
+  content: "";
+  width: 30px;
+  height: 65px;
+  float: left;
+  display: inline-block;
+  background: url('../images/facebook.svg') no-repeat center;
+  background-size: contain;
 }
 
 .btn.disabled {
