--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -517,7 +517,7 @@ header .menu-items-wrapper .menu-list-wrapper li a {
   font-family: "AmsiNarw-Regular", sans-serif;
   font-size: 1.3em; }
 
-header .menu-mobile-full {
+header #menu-mobile-wrapper {
   display: none; }
 
 /*******************************/
@@ -1193,7 +1193,7 @@ header .menu-mobile-full {
     position: relative; }
   header .menu-mobile img {
     width: 25px; }
-  header .menu-mobile-full img {
+  header #menu-mobile-wrapper img {
     height: 30px; }
   .header-mobile-menu {
     display: flex;
