--- a/views/registro/index.hbs
+++ b/views/registro/index.hbs
@@ -25,7 +25,7 @@
       </div>
       <div class="generate-wrapper">
       <a href="/registro/step-1" class="btn home-button disabled" id="nuevo-usuario-btn">GENERAR MI USUARIO</a>
-      <a href="/auth/facebook" class="btn home-button disabled fb" id="nuevo-usuario-btn-fb">CONECTAR CON FACEBOOK</a>
+      {{!-- <a href="/auth/facebook" class="btn home-button disabled fb" id="nuevo-usuario-btn-fb">CONECTAR CON FACEBOOK</a> --}}
       </div>
       <hr>
       <div class="validator-wrapper">
