--- a/views/registro/registroTres.hbs
+++ b/views/registro/registroTres.hbs
@@ -18,7 +18,7 @@
       <h2>Activá tu usuario</h2>
       <p class="message-step-2">Revisa tu correo, te enviamos un link para activar tu usuario.</p>
       <img src="/images/usuario_pendiente@2x.png" alt="" class="usuario-pendiente-img">
-      <a href="registro/step-4" class="step-3-button">Ir al siguiente paso!</a>
+      <a href="/registro/step-4" class="step-3-button">Ir al siguiente paso!</a>
       
       <div class="bases-footer">
         <a href="/bases-condiciones">BASES Y CONDICIONES</a>
