--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,7 +13,7 @@
       <span>{{user.vouchersQ}}</span>
     </p>
     <p class="info-container">
-      PACKS CANJEADOS
+      CÓDIGOS CARGADOS
       <span>{{user.codesQ}}</span>
     </p>
   </div>
