--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1450,5 +1450,9 @@ header #menu-mobile-wrapper {
     z-index: 1000;
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
   }
+
+  .response-wrapper {
+    width: 80%;
+  }
 }
 
