--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1451,7 +1451,7 @@ header #menu-mobile-wrapper {
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
   }
 
-  .response-wrapper {
+  .api-response .response-wrapper {
     width: 80%;
   }
 }
