--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
   <div class="body-wrapper">
     <header>
       <div class="menu-mobile" id="menu-mobile">
-        <img src="/images/menu-mobile.svg" alt="">
+        <img src="/images/menu-mobile.svg" alt="" style="transform: rotate(180deg)">
       </div>
         <div class="menu-items-wrapper animated" id="menu-mobile-wrapper">
           <div class="header-mobile-menu">
