--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -588,13 +588,15 @@ header #menu-mobile-wrapper {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
-  padding: 0 15%; }
+  padding: 0 0;
+  flex-wrap: wrap; }
 
 .canje-item-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  margin-bottom: 15px; }
 
 .canje-item-wrapper p {
   font: 0.7em "AmsiPro-Regular", sans-serif;
@@ -620,8 +622,9 @@ header #menu-mobile-wrapper {
   width: 100%;
   height: 100%;
   border-radius: 360px;
-  background-size: cover;
-  background-position: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   opacity: 0.2; }
 
 .image-item-container.active {
@@ -1215,6 +1218,8 @@ header #menu-mobile-wrapper {
     left: 0;
     background: rgba(255, 255, 255, 0.963);
     z-index: 1000;
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3); } }
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3); }
+  .api-response .response-wrapper {
+    width: 80%; } }
 
 /*# sourceMappingURL=style.css.map */
