--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -691,7 +691,8 @@ header #menu-mobile-wrapper {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
-  padding: 0 15%;
+  padding: 0 0;
+  flex-wrap: wrap;
 }
 
 .canje-item-wrapper {
@@ -699,6 +700,7 @@ header #menu-mobile-wrapper {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 15px;
 }
 
 .canje-item-wrapper p {
@@ -727,8 +729,9 @@ header #menu-mobile-wrapper {
   width: 100%;
   height: 100%;
   border-radius: 360px;
-  background-size: cover;
-  background-position: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   opacity: 0.2;
 }
 
