--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,8 +24,8 @@
             <li><a href="/consumos">CONSUMOS</a></li>
             <li><a href="/canjes">CANJES</a></li>
             <li><a href="/premios">PREMIOS</a></li>
-            <li><a href="/categorias">CATEGORÍAS</a></li>
             <li><a href="/profile">PERFIL</a></li>
+            <li><a href="/faqs">FAQS</a></li>
           </div>
           <div style="display: flex; justify-content:center">
             <img src="images/lupulo.png" alt="">
@@ -44,8 +44,8 @@
             <li><a href="/consumos">CONSUMOS</a></li>
             <li><a href="/canjes">CANJES</a></li>
             <li><a href="/premios">PREMIOS</a></li>
-            <li><a href="/categorias">CATEGORÍAS</a></li>
             <li><a href="/profile">PERFIL</a></li>
+            <li><a href="/faqs">FAQS</a></li>
         </ul>
       </div>
       <div class="profile-wrapper">
