--- a/views/registro/index.hbs
+++ b/views/registro/index.hbs
@@ -14,18 +14,19 @@
     </div>
     <div class="form-home-wrapper">
       <img src="/images/logo-color.png" alt="" class="logo-home">
-      <h1>¡Bienvenido a Pasaporte Patagonia!</h1>
+      <h1 style="text-align:center">¡Bienvenido!</h1>
+      <h2>Cada Cerveza te lleva a Bariloche</h2>
       <img src="/images/lupulo.png" alt="" class="lupus-icon">
       <div class="home-text-wrapper">
-        <h3>Sumá Kms. y accedé a descuentos y premios exclusivos</h3>
+        <h3>Acá podes acumular kilómetros para viajar a conocer nuestra Microcerveria o canjearlos por premios exclusivos.</h3>
       </div>
       <div class="validator-wrapper">
         <input type="checkbox" id="mayor-input">
-        <label for="" id="mayor-trigger">Soy mayor de 18 años</label>
+        <label for="" id="mayor-trigger">Soy mayor de 20 años</label>
       </div>
       <div class="generate-wrapper">
       <a href="/registro/step-1" class="btn home-button disabled" id="nuevo-usuario-btn">GENERAR MI USUARIO</a>
-      {{!-- <a href="/auth/facebook" class="btn home-button disabled fb" id="nuevo-usuario-btn-fb">CONECTAR CON FACEBOOK</a> --}}
+      <a href="/auth/facebook" class="btn home-button disabled fb" id="nuevo-usuario-btn-fb">CONECTAR CON FACEBOOK</a>
       </div>
       <hr>
       <div class="validator-wrapper">
@@ -33,7 +34,8 @@
       </div>
       <div class="bases-footer">
         <a href="/bases-condiciones">BASES Y CONDICIONES</a>
-        <span>BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS.</span>
+        <span style="text-align:center">SU CONSUMO EN EXCESO DAÑA LA SALUD. ESTA PROHIBIDA SU VENTA A LOS MENORES DE 20 AÑOS. <br>
+        Lo advierte el Ministerio de Salud Pública y Bienestar Social</span>
       </div>
     </div>
   </div>
