--- a/views/registro/registroTres.hbs
+++ b/views/registro/registroTres.hbs
@@ -14,11 +14,11 @@
     </div>
     <div class="form-home-wrapper-steps">
       <img src="/images/logo-color.png" alt="" class="logo-home">
-      <p class="step-counter">Paso 3 de 4</p>
-      <h2>Activá tu usuario</h2>
-      <p class="message-step-2">Revisa tu correo, te enviamos un link para activar tu usuario.</p>
+      <h2>Cada Cerveza te lleva a Bariloche</h2>
+      <p class="step-counter">Paso 3 de 3</p>
+      <h3>Activá tu usuario</h3>
+      <p class="message-step-2">Te hemos enviado al correo <span>{{user.email}}</span>, un link para activar tu usuario.</p>
       <img src="/images/usuario_pendiente@2x.png" alt="" class="usuario-pendiente-img">
-      <a href="/registro/step-4" class="step-3-button">Ir al siguiente paso!</a>
       
       <div class="bases-footer">
         <a href="/bases-condiciones">BASES Y CONDICIONES</a>
