--- a/views/activarCuenta.hbs
+++ b/views/activarCuenta.hbs
@@ -1,9 +1,8 @@
 <div class="profile-info-wrapper recuperar">
   <div class="info-row">
-    <img src="{{user.category.image}}" alt="">
     <div class="personal-info-text">
       <h3>Hola {{user.name}} {{user.lastName}}!</h3>
-      <p>Aún no has activado tu cuenta. Te enviamos un correo con un link para activarla. Si no recibiste el correo o lo has perdido, haz click en el botón de abajo.</p>
+      <p>Aún no has activado tu cuenta. Revisa tu correo <strong>{{user.email}}</strong>, te hemos enviado el link para activarla. Si no recibiste el correo o lo has perdido, haz click en el botón de abajo.</p>
     </div>
   </div>
     <p id="form-error-message" style="margin: 30px auto;"></p>
