--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,14 +1,13 @@
 <div class="profile-info-wrapper">
   <div class="info-row">
-    <img src="{{user.category.image}}" alt="">
     <div class="personal-info-text">
       <h3>{{user.name}} {{user.lastName}}</h3>
       <h4>{{user.dni}}</h4>
       <p>{{user.formatDate}}</p>
-      <p>
-        <span>Categoría: </span>{{user.category.name}}</p>
+      
     </div>
   </div>
+  <p style="text-align: center; margin-top: 30px; font-size: 1.5rem; width: 60%; margin-left: 20%;">¡Apurate! Estas en el {{user.position}}º lugar para ganar el viaje a Bariloche, solo te faltan {{user.kmsToBariloche}} kms!</p>
   <div class="step-counter-old-codes">
     <span> EDITAR INFORMACIÓN</span>
   </div>
