--- a/views/registro/registroUno.hbs
+++ b/views/registro/registroUno.hbs
@@ -14,8 +14,9 @@
     </div>
     <div class="form-home-wrapper-steps">
       <img src="/images/logo-color.png" alt="" class="logo-home">
-      <p class="step-counter">Paso 1 de 4</p>
-      <h2>Completá tus datos</h2>
+      <h2>Cada Cerveza te lleva a Bariloche</h2>
+      <p class="step-counter">Paso 1 de 3</p>
+      <h3>Completá tus datos</h3>
       <form action="/auth/signup" method="post" onsubmit="return validateForm()" name="step-one-form">
         <fieldset>
           <input type="text" name="name" autocomplete="off">
