--- a/views/registro/registroUno.hbs
+++ b/views/registro/registroUno.hbs
@@ -35,7 +35,7 @@
           <input type="email" name="email" autocomplete="off" value={{user.email}}>
           <label for="">Email</label>
         </fieldset>
-        {{/else}}
+        {{else}}
         <fieldset>
           <input type="email" name="email" autocomplete="off">
           <label for="">Email</label>
