--- a/views/registro/registroUno.hbs
+++ b/views/registro/registroUno.hbs
@@ -19,28 +19,40 @@
       <h3>Completá tus datos</h3>
       <form action="/auth/signup" method="post" onsubmit="return validateForm()" name="step-one-form">
         <fieldset>
+        {{#if flag}}
+          <input type="text" name="name" autocomplete="off" value={{user.name}}>
+        {{else}}
           <input type="text" name="name" autocomplete="off">
+        {{/if}}
           <label for="">Nombre</label>
         </fieldset>
         <fieldset>
+        {{#if flag}}
+          <input type="text" name="lastName" autocomplete="off" value={{user.lastName}}>
+        {{else}}
           <input type="text" name="lastName" autocomplete="off">
           <label for="">Apellido</label>
+        {{/if}}
         </fieldset>
         <fieldset>
           <input type="text" name="dni" autocomplete="off">
           <label for="">Cédula/Pasaporte</label>
         </fieldset>
+        <fieldset>
         {{#if flag}}
-        <fieldset>
           <input type="email" name="email" autocomplete="off" value={{user.email}}>
-          <label for="">Email</label>
-        </fieldset>
         {{else}}
-        <fieldset>
           <input type="email" name="email" autocomplete="off">
+        {{/if}}
           <label for="">Email</label>
         </fieldset>
+        {{#if flag}}
+        <fieldset style="display:none;">
+          <input type="select" name="flag" autocomplete="off" checked>
+        {{else}}
+          <input type="select" name="flag" autocomplete="off">
         {{/if}}
+        </fieldset>
         <fieldset class="birthday-row">
           <input type="date" name="birthdate" id="birthdate" style="opacity:0;position:absolute;top:-9000px">
           <div class="day-birth">
