--- a/views/registro/registroUno.hbs
+++ b/views/registro/registroUno.hbs
@@ -48,9 +48,9 @@
         </fieldset>
         {{#if flag}}
         <fieldset style="">
-          <input type="select" name="flag" autocomplete="off" checked>
+          <input type="checkbox" name="flag" autocomplete="off" checked>
         {{else}}
-          <input type="select" name="flag" autocomplete="off">
+          <input type="checkbox" name="flag" autocomplete="off">
         {{/if}}
         </fieldset>
         {{#if flag}}
