--- a/views/canjes.hbs
+++ b/views/canjes.hbs
@@ -4,10 +4,10 @@
       <img src="/images/passport.png" alt="">
       {{vouchers.length}}
     </span>
-    <p>CANJES REALIZADOS</p>
+    <p>VOUCHERS CANJEADOS</p>
   </div>
    <div class="step-counter-old-codes">
-       <span> CÓDIGOS CANJEADOS</span>
+       <span> PREMIOS CANJEADOS</span>
     </div>
     <p class="cargar-codigo-paragraph" style="margin-bottom: 0px;">AQUÍ PUEDES REVISAR TODOS LOS VOUCHERS QUE HAS CANJEADO Y SU ESTADO</p>
     <div class="code-items">
@@ -17,6 +17,20 @@
         <p class="code-value">Premio: <span>{{this.prizeObj.name}}</span></p> 
         <p class="code-value">Kms. Utilizados: <span>{{this.kmsUsed}}kms.</span></p> 
         <p class="code-value">Status: <span>{{this.status}}</span></p> 
+        <p class="code-date">Fecha de Carga: <span>{{this.date}}</span></p> 
+      </div>
+      {{/each}}
+    </div>
+
+    <div class="step-counter-old-codes">
+       <span> CÓDIGOS CANJEADOS</span>
+    </div>
+    <p class="cargar-codigo-paragraph" style="margin-bottom: 0px;">AQUÍ PUEDES REVISAR TODOS LOS CÓDIGOS QUE HAS CANJEADO</p>
+    <div class="code-items">
+      {{#each codes}}
+      <div class="code-item-wrapper">
+        <p class="code-id">Código: <span>{{this.code_id}}</span></p> 
+        <p class="code-value">Valor: <span>{{this.kmsValue}}kms.</span></p> 
         <p class="code-date">Fecha de Carga: <span>{{this.date}}</span></p> 
       </div>
       {{/each}}
