--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,7 @@
           <div class="menu-list-wrapper" style="padding: 10% 5% 15% 8%; display: flex; flex-direction: column; height: 80vh; justify-content: space-between;">
             <li><a href="/" class="active">INICIO</a></li>
             <li><a href="/codigos">CARGAR CÓDIGO</a></li>
-            <li><a href="/consumos">CONSUMOS</a></li>
+            {{!-- <li><a href="/consumos">CONSUMOS</a></li> --}}
             <li><a href="/canjes">CANJES</a></li>
             <li><a href="/premios">PREMIOS</a></li>
             <li><a href="/profile">PERFIL</a></li>
@@ -41,7 +41,7 @@
         <ul>
           <li><a href="/" class="active">INICIO</a></li>
             <li><a href="/codigos">CARGAR CÓDIGO</a></li>
-            <li><a href="/consumos">CONSUMOS</a></li>
+            {{!-- <li><a href="/consumos">CONSUMOS</a></li> --}}
             <li><a href="/canjes">CANJES</a></li>
             <li><a href="/premios">PREMIOS</a></li>
             <li><a href="/profile">PERFIL</a></li>
