--- a/views/registro/registroUno.hbs
+++ b/views/registro/registroUno.hbs
@@ -47,7 +47,7 @@
           <label for="">Email</label>
         </fieldset>
         {{#if flag}}
-        <fieldset style="">
+        <fieldset style="display: none;">
           <input type="checkbox" name="flag" autocomplete="off" checked>
         {{else}}
           <input type="checkbox" name="flag" autocomplete="off">
