--- a/views/premios.hbs
+++ b/views/premios.hbs
@@ -12,9 +12,24 @@
   </div>
   <div class="viaje-a-bariloche-wrapper">
     <div class="kms-a-bariloche-wrapper">
-      <p>Te faltan</p>
-      <p>{{user.kmsToBariloche}} kms</p>
-      <p>para bariloche!</p>
+
+    
+    <div class="canje-item-wrapper">
+      <div class="canje-item">
+        {{#if available}}<div class="image-item-container active" style="background-image: url('images/avion-w.svg')"></div>{{/if}}
+        {{#unless available}}
+        <div class="image-item-container" style="background-image: url('images/avion-w.svg')"></div>
+        <p>
+          Faltan
+          <span> {{user.kmsToBariloche}} kms</span>
+          para Bariloche!
+        </p>
+        {{/unless}}
+      </div>
+      {{#if available}}
+        <button class="btn voucher voucher-button" id="voucher-generate" data-value="{{this._id}}">CANJEAR</button>
+      {{/if}}
+    </div>
     </div>
     <div class="viaje-info-wrapper">
     <p>Que incluye el viaje?</p>
