--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -714,7 +714,7 @@ header #menu-mobile-wrapper {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   margin-right: 10px;
   margin-left: 10px;
 }
@@ -949,6 +949,12 @@ header #menu-mobile-wrapper {
   margin-top: 20px;
   height: 40px;
   cursor: pointer;
+  width: 100px;
+}
+
+.voucher-button-disabled {
+  opacity: 0.2;
+  pointer-events: none;
 }
 
 .api-response {
