--- a/views/bases.hbs
+++ b/views/bases.hbs
@@ -11,7 +11,7 @@
 
 <body>
   <div class="header-bases">
-    <img src="/images/logo-color.png" alt="">
+    <a href="/"><img src="/images/logo-color.png" alt=""></a>
   </div>
   <div class="bases-wrapper">
     <h2>BASES Y CONDICIONES</h2>
