--- a/views/codigo.hbs
+++ b/views/codigo.hbs
@@ -12,6 +12,6 @@
     <div class="return-message-wrapper" id="message-wrapper">
       <p id="return-message"></p>
       <p id="return-message-kms"></p>
-      <a href="/consumos" class="btn">VER TODOS MIS CONSUMOS</a>
+      <a href="/premios" class="btn">VER TODOS LOS PREMIOS</a>
     </div>
 </div>
