--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -224,7 +224,10 @@ body {
 .home-wrapper-steps {
   width: 100%;
   display: flex;
-  min-height: 100vh; }
+  min-height: 100vh;
+  background-image: url("../images/paisaje.jpg");
+  background-position: center;
+  background-size: cover; }
 
 .form-home-wrapper-steps {
   width: 50%;
@@ -605,7 +608,7 @@ header #menu-mobile-wrapper {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   margin-right: 10px;
   margin-left: 10px; }
 
@@ -803,7 +806,12 @@ header #menu-mobile-wrapper {
 .btn.voucher {
   margin-top: 20px;
   height: 40px;
-  cursor: pointer; }
+  cursor: pointer;
+  width: 100px; }
+
+.voucher-button-disabled {
+  opacity: 0.2;
+  pointer-events: none; }
 
 .api-response {
   position: fixed;
