--- a/views/canjes.hbs
+++ b/views/canjes.hbs
@@ -23,7 +23,7 @@
     </div>
 
     <div class="step-counter-old-codes">
-       <span> CÓDIGOS CANJEADOS</span>
+       <span> CÓDIGOS CARGADOS</span>
     </div>
     <p class="cargar-codigo-paragraph" style="margin-bottom: 0px;">AQUÍ PUEDES REVISAR TODOS LOS CÓDIGOS QUE HAS CANJEADO</p>
     <div class="code-items">
