--- a/views/canjes.hbs
+++ b/views/canjes.hbs
@@ -4,7 +4,7 @@
       <img src="/images/passport.png" alt="">
       {{vouchers.length}}
     </span>
-    <p>VOUCHERS CANJEADOS</p>
+    <p>VOUCHERS GENERADOS</p>
   </div>
    <div class="step-counter-old-codes">
        <span> PREMIOS CANJEADOS</span>
