--- a/views/canjes.hbs
+++ b/views/canjes.hbs
@@ -16,7 +16,7 @@
         <p class="code-id">Código: <span>{{this.voucher}}</span></p> 
         <p class="code-value">Premio: <span>{{this.prizeObj.name}}</span></p> 
         <p class="code-value">Kms. Utilizados: <span>{{this.kmsUsed}}kms.</span></p> 
-        <p class="code-value">Status: <span>{{this.status}}</span></p> 
+        <p class="code-value">Status: <span>{m{this.status}}</span></p> 
         <p class="code-date">Fecha de Carga: <span>{{this.date}}</span></p> 
       </div>
       {{/each}}
