--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,7 +3,8 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <script src="/static/progressbar.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Cerveza Patagonia</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -22,8 +23,8 @@
             <li><a href="/" class="active">INICIO</a></li>
             <li><a href="/codigos">CARGAR CÓDIGO</a></li>
             {{!-- <li><a href="/consumos">CONSUMOS</a></li> --}}
-            <li><a href="/canjes">CANJES</a></li>
             <li><a href="/premios">PREMIOS</a></li>
+            <li><a href="/canjes">CANJES</a></li>
             <li><a href="/profile">PERFIL</a></li>
             <li><a href="/faqs">FAQS</a></li>
           </div>
@@ -42,8 +43,8 @@
           <li><a href="/" class="active">INICIO</a></li>
             <li><a href="/codigos">CARGAR CÓDIGO</a></li>
             {{!-- <li><a href="/consumos">CONSUMOS</a></li> --}}
-            <li><a href="/canjes">CANJES</a></li>
             <li><a href="/premios">PREMIOS</a></li>
+            <li><a href="/canjes">CANJES</a></li>
             <li><a href="/profile">PERFIL</a></li>
             <li><a href="/faqs">FAQS</a></li>
         </ul>
