--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -634,23 +634,54 @@ header #menu-mobile-wrapper {
   padding: 10px 17%;
 }
 
+
+#map-container {
+  width: 800px;
+  height: 350px;
+  margin-top: 30px;
+  padding-left: 80px;
+}
+
+#map-container svg {
+  width: 100%;
+  height: 100%;
+}
+
+.home-wrapper-info .main-title {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 25px;
+}
+
+.home-wrapper-info .main-p {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 50px;
+  font-family: "AmsiPro-Light", sans-serif;
+}
+
 .info-wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 30%;
+  margin-left: 70%;
 }
 
 .info-container {
-  width: 50%;
+  width: 100%;
   background-image: url("../images/recuadro.png");
   background-size: cover;
   background-position: cover;
   display: flex;
-  padding: 0 1% 0 7%;
+  padding: 0% 0% 0% 18%;
   height: 80px;
   align-items: center;
   justify-content: space-between;
   color: #fff;
-  font-size: 1.2em;
+  font-size: 1em;
   font-family: "AmsiPro-Regular", sans-serif;
   margin-bottom: 20px;
 }
@@ -659,7 +690,7 @@ header #menu-mobile-wrapper {
   background-image: url("../images/recuadro-span.png");
   background-size: cover;
   background-position: cover;
-  width: 25%;
+  width: 35%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -686,6 +717,16 @@ header #menu-mobile-wrapper {
   width: 30%;
   padding: 0 5%;
   text-align: center;
+}
+
+.canjes-wrapper p {
+  font: 0.9em "AmsiPro-Light", sans-serif;
+  text-align: center;
+  color: #fff;
+}
+
+.step-counter-home.special span {
+  width: 70%;
 }
 
 
