--- a/views/activarCuenta.hbs
+++ b/views/activarCuenta.hbs
@@ -1,7 +1,7 @@
 <div class="profile-info-wrapper recuperar">
   <div class="info-row">
     <div class="personal-info-text">
-      <h3>Hola {{user.name}} {{user.lastName}}!</h3>
+      <h3>¡Hola {{user.name}} {{user.lastName}}!</h3>
       <p>Aún no has activado tu cuenta. Revisa tu correo <strong>{{user.email}}</strong>, te hemos enviado el link para activarla. Si no recibiste el correo o lo has perdido, haz click en el botón de abajo.</p>
     </div>
   </div>
