--- a/views/admin/voucherTrade.hbs
+++ b/views/admin/voucherTrade.hbs
@@ -13,7 +13,7 @@
      <div class="form-home-wrapper-steps" style="background: transparent; width: 100%">
       <img src="/images/logo-color.png" alt="" class="logo-home">
      </div>
-     <h2 style="color:#fff; margin-bottom: 50px;">El voucher ha sido <br> canjeado correctamente!</h2>
+     <h2 style="color:#fff; margin-bottom: 50px;">¡El voucher ha sido <br> canjeado correctamente!</h2>
 
     <a href="/store-panel" class="step-3-button">Volver</a>
 </div>
