--- a/views/premios.hbs
+++ b/views/premios.hbs
@@ -20,7 +20,7 @@
         {{#unless available}}
         <div class="image-item-container" style="background-image: url('images/avion-w.svg')"></div>
         <p>
-          Faltan
+          ¡Faltan
           <span> {{user.kmsToBariloche}} kms</span>
           para Bariloche!
         </p>
