--- a/views/registro/registroCuatro.hbs
+++ b/views/registro/registroCuatro.hbs
@@ -15,8 +15,8 @@
     <div class="form-home-wrapper-steps">
       <img src="/images/logo-color.png" alt="" class="logo-home">
       <p class="step-counter">Paso 4 de 4</p>
-      <h2>Comenzá a sumar kms!</h2>
-      <p class="message-step-2">Carga en tu perfil los códigos que vienen en los packs de Patagonia y canjeá tus KMs por premios increibles!</p>
+      <h2>¡Comenzá a sumar kms!</h2>
+      <p class="message-step-2">¡Carga en tu perfil los códigos que vienen en los packs de Patagonia y canjeá tus KMs por premios increibles!</p>
       <img src="/images/cervezas.png" alt="" class="cervezas-img">
       
       <a href="/" class="btn data-confirm">IR A TU PASAPORTE</a>
