--- a/views/error.hbs
+++ b/views/error.hbs
@@ -17,7 +17,7 @@
     <div class="message-error-wrapper">
       <img src="images/beer-bottle.svg" alt="">
       <div class="text-error-wrapper">
-        <h3>Éste es un Error 500! <br> En nuestros servidores ha pasado algo muy malo y no podemos mostrar esta página!</h3>
+        <h3>¡Éste es un Error 500! <br> En nuestros servidores ha pasado algo muy malo y no podemos mostrar esta página!</h3>
         <p>Pero tranquilo, mientras nuestros técnicos se ponene a arreglar los problemas, tomate una cerveza y volvé en un rato!</p>
         <p>Si necesitas algo urgente ponéte en contacto con nosotros.</p>
       </div>
