--- a/views/registro/index.hbs
+++ b/views/registro/index.hbs
@@ -30,7 +30,7 @@
       </div>
       <hr>
       <div class="validator-wrapper">
-      <a href="/login" class="btn home-button">YA TENGO MI PASAPORTE</a>
+      <a href="/login" class="btn home-button">YA TENGO MI USUARIO</a>
       </div>
       <div class="bases-footer">
         <a href="/bases-condiciones">BASES Y CONDICIONES</a>
