--- a/views/registro/registroDos.hbs
+++ b/views/registro/registroDos.hbs
@@ -14,7 +14,7 @@
     </div>
     <div class="form-home-wrapper-steps">
       <img src="/images/logo-color.png" alt="" class="logo-home">
-      <h2>Cada Cerveza te lleva a Bariloche</h2>
+      <h2>¡Cada Cerveza te lleva a Bariloche!</h2>
       <p class="step-counter">Paso 2 de 3</p>
       <h3>Elegí un password</h3>
       <p class="message-step-2">Tu usuario es tu Cédula y ahora tenés que confirmar la password para el acceso al panel.</p>
