--- a/views/registro/registroTres.hbs
+++ b/views/registro/registroTres.hbs
@@ -14,7 +14,7 @@
     </div>
     <div class="form-home-wrapper-steps">
       <img src="/images/logo-color.png" alt="" class="logo-home">
-      <h2>Cada Cerveza te lleva a Bariloche</h2>
+      <h2>¡Cada Cerveza te lleva a Bariloche!</h2>
       <p class="step-counter">Paso 3 de 3</p>
       <h3>Activá tu usuario</h3>
       <p class="message-step-2">Te hemos enviado al correo <span>{{user.email}}</span>, un link para activar tu usuario.</p>
