--- a/views/registro/registroUno.hbs
+++ b/views/registro/registroUno.hbs
@@ -14,7 +14,7 @@
     </div>
     <div class="form-home-wrapper-steps">
       <img src="/images/logo-color.png" alt="" class="logo-home">
-      <h2>Cada Cerveza te lleva a Bariloche</h2>
+      <h2>¡Cada Cerveza te lleva a Bariloche!</h2>
       <p class="step-counter">Paso 1 de 3</p>
       <h3>Completá tus datos</h3>
       <form action="/auth/signup" method="post" onsubmit="return validateForm()" name="step-one-form">
