--- a/views/registro/login.hbs
+++ b/views/registro/login.hbs
@@ -14,10 +14,10 @@
     </div>
     <div class="form-home-wrapper-steps">
       <img src="/images/logo-color.png" alt="" class="logo-home">
-      <h2>Bienvenido a Pasaporte Patagonia</h2>
+      <h2>¡Cada Cerveza te lleva a Bariloche!</h2>
       <img src="/images/lupulo.png" alt="" class="lupus-icon login">
       <div class="home-text-wrapper" style="margin-bottom: 15px;">
-        <h3>Ingresa a tu cuenta y sigue sumando kms.</h3>
+        <h3>Ingresa a tu cuenta y acumulá kms.</h3>
       </div>
       <form action="/auth/login" method="post" onsubmit="return validateLogin()" name="step-three-form">
         <fieldset>
