--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -581,7 +581,7 @@ header .menu-wrapper ul li a.active {
 }
 
 .bases-footer {
-   padding-bottom: 20px;
+   padding-bottom: 0px;
 }
 
 .bases-footer span {
@@ -1492,6 +1492,15 @@ header #menu-mobile-wrapper {
   width: 100%;
   min-height: 100vh;
 }
+
+.legal-wrapper {
+  width: 100%;
+  padding: 15px 20%;
+  text-align: center;
+  background-color: #3f3f3f;
+}
+
+
 
 
 /*******************************/
