--- a/views/bases.hbs
+++ b/views/bases.hbs
@@ -319,10 +319,10 @@
       conocidas por todos los Participantes.
 
     </p>
-    <span>
-      BEBIDAS ALCOHÓLICAS: BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS.
-
-    </span>
+    <div class="legal-wrapper">
+            <span style="text-align:center">SU CONSUMO EN EXCESO DAÑA LA SALUD. ESTA PROHIBIDA SU VENTA A LOS MENORES DE 20 AÑOS. <br>
+            Lo advierte el Ministerio de Salud Pública y Bienestar Social</span>
+          </div>
   </div>
 </body>
 
