--- a/views/premios.hbs
+++ b/views/premios.hbs
@@ -35,11 +35,10 @@
     <p>Que incluye el viaje?</p>
     <ul>
       <li>Pasaje en avión ida y vuelta a Bariloche</li>
-      <li>Estadía en Hotel durante 3 noches</li>
+      <li>Estadía en un Hotel en Bariloche durante 3 noches</li>
       <li>Viático para 4 días</li>
-      <li>Tour a la Microcervecería Patagonia</li>
+      <li>Entrada a la Microcerveceria Patagonia</li>
       <li>Merchandising de la marca</li>
-      <li>Traslados Aeropuerto-Hotel / Hotel-Aeropuerto</li>
     </ul>
     </div>
     
