--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -7,7 +7,7 @@
       
     </div>
   </div>
-  <p style="text-align: center; margin-top: 30px; font-size: 1.5rem; width: 60%; margin-left: 20%;">¡Apurate! ¡Estas en el {{user.position}}º lugar para ganar el viaje a Bariloche, solo te faltan {{user.kmsToBariloche}} kms!</p>
+  <p style="text-align: center; margin-top: 30px; font-size: 1.5rem; width: 60%; margin-left: 20%;">¡Apurate! ¡Te faltan {{user.kmsToBariloche}} kms!</p>
   <div class="step-counter-old-codes">
     <span> EDITAR INFORMACIÓN</span>
   </div>
