--- a/views/registro/registroCuatro.hbs
+++ b/views/registro/registroCuatro.hbs
@@ -22,7 +22,10 @@
       <a href="/" class="btn data-confirm">IR A TU PASAPORTE</a>
       <div class="bases-footer">
         <a href="/bases-condiciones">BASES Y CONDICIONES</a>
-        <span>BEBER CON MODERACIÓN. PROHIBIDA SU VENTA A MENORES DE 18 AÑOS.</span>
+        <div class="legal-wrapper">
+            <span style="text-align:center">SU CONSUMO EN EXCESO DAÑA LA SALUD. ESTA PROHIBIDA SU VENTA A LOS MENORES DE 20 AÑOS. <br>
+            Lo advierte el Ministerio de Salud Pública y Bienestar Social</span>
+          </div>
       </div>
     </div>
   </div>
