--- a/views/bases.hbs
+++ b/views/bases.hbs
@@ -320,7 +320,7 @@
 
     </p>
     <div class="legal-wrapper">
-            <span style="text-align:center">SU CONSUMO EN EXCESO DAÑA LA SALUD. ESTA PROHIBIDA SU VENTA A LOS MENORES DE 20 AÑOS. <br>
+            <span style="text-align:center">SU CONSUMO EN EXCESO DAÑA LA SALUD. ESTA PROHIBIDA SU VENTA A LOS MENORES DE 20 AÑOS.
             Lo advierte el Ministerio de Salud Pública y Bienestar Social</span>
           </div>
   </div>
