--- a/views/registro/recuperarForm.hbs
+++ b/views/registro/recuperarForm.hbs
@@ -39,8 +39,7 @@
       <div class="bases-footer">
         <a href="/bases-condiciones">BASES Y CONDICIONES</a>
         <div class="legal-wrapper">
-            <span style="text-align:center">SU CONSUMO EN EXCESO DAÑA LA SALUD. ESTA PROHIBIDA SU VENTA A LOS MENORES DE 20 AÑOS. <br>
-            Lo advierte el Ministerio de Salud Pública y Bienestar Social</span>
+            <span style="text-align:center; text-transform:uppercase">SU CONSUMO EN EXCESO DAÑA LA SALUD. ESTA PROHIBIDA SU VENTA A LOS MENORES DE 20 AÑOS. Lo advierte el Ministerio de Salud Pública y Bienestar Social</span>
           </div>
       </div>
     </div>
