--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1505,6 +1505,8 @@ header #menu-mobile-wrapper {
 
 .legal-wrapper span {
   color: #000;
+  font-weight: bold;
+  font-family: "AmsiPro-Bold", sans-serif;
 }
 
 
