--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1279,7 +1279,8 @@ header #menu-mobile-wrapper {
 .legal-wrapper span {
   color: #000;
   font-weight: bold;
-  font-family: "AmsiPro-Bold", sans-serif; }
+  font-family: "AmsiPro-Bold", sans-serif;
+  font-size: 10px; }
 
 /*******************************/
 /*                             */
