--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1507,6 +1507,7 @@ header #menu-mobile-wrapper {
   color: #000;
   font-weight: bold;
   font-family: "AmsiPro-Bold", sans-serif;
+  font-size: 10px;
 }
 
 
