--- a/views/registro/index.hbs
+++ b/views/registro/index.hbs
@@ -34,9 +34,11 @@
       </div>
       <div class="bases-footer">
         <a href="/bases-condiciones">BASES Y CONDICIONES</a>
-        <span style="text-align:center; text-transform:uppercase">SU CONSUMO EN EXCESO DAÑA LA SALUD. ESTA PROHIBIDA SU VENTA A LOS MENORES DE 20 AÑOS. Lo advierte el Ministerio de Salud Pública y Bienestar Social</span>
       </div>
     </div>
+  </div>
+  <div class="legal-wrapper">
+            <span style="text-align:center; text-transform:uppercase">SU CONSUMO EN EXCESO DAÑA LA SALUD. ESTA PROHIBIDA SU VENTA A LOS MENORES DE 20 AÑOS. Lo advierte el Ministerio de Salud Pública y Bienestar Social</span>
   </div>
   <script src='/javascripts/script.js'></script>
 </body>
