--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -639,11 +639,26 @@ header #menu-mobile-wrapper {
   width: 340px;
   height: 363px;
   margin-top: 30px;
+  position: relative;
+  text-align: center;
 }
 
 #map-container svg {
   width: 100%;
   height: 100%;
+}
+
+#map-container p {
+  color: #fff;
+    font-size: 24px;
+    position: absolute;
+    top: 30%;
+    left: 45%;
+    font-family: "AmsiPro-Light", sans-serif;
+}
+
+#map-container p span {
+  font-family: "AmsiPro-Bold", sans-serif;
 }
 
 .home-wrapper-info .main-title {
