--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1395,6 +1395,10 @@ header #menu-mobile-wrapper {
     z-index: 1000;
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3); }
   .api-response .response-wrapper {
-    width: 80%; } }
+    width: 80%; }
+  .home-info {
+    flex-direction: column; }
+  .map-wrapper, .info-wrapper {
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
